con bordes y background

--- a/Ejercicio CV 5.html
+++ b/Ejercicio CV 5.html
@@ -4,12 +4,12 @@
 <meta name="Curriculum IN" content="CV Isabel Navarrina"></meta>
 <meta charset="utf-8"></meta>
 <title> CURRICULUM VITAE</title>
-<!-- > <link rel="estilosCV" href="estilosCV.css/>" > < --> 
+<!-- > <link rel="estilosCV" href="css/estilosCV.css/>" > < --> 
 <link rel="stylesheet" href="estilosCV.css" >
 
 <!-- > <style>
    
-        .divTodo {
+        #divTodo {
           width:100%;
           background-color:#FFF4A3;
           overflow:auto;
@@ -32,7 +32,7 @@
 <body>
 <header></header>
     
-<div class ="divTodo">
+<div id ="divTodo">
 <div id="divPersonal"  >
 <p> <h4> DATOS PERSONALES </h4> </p>
 <img src="ejecutiva2.png">  </img>
