--- a/Ejercicio CV 5.html
+++ b/Ejercicio CV 5.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8"></meta>
 <title> CURRICULUM VITAE</title>
 <!-- > <link rel="estilosCV" href="css/estilosCV.css/>" > < --> 
-<link rel="stylesheet" href="estilosCV.css" >
+<link rel="stylesheet" href="css/estilosCV.css" >
 
 <!-- > <style>
    
@@ -45,19 +45,19 @@
 <br> </br> 
 </div>
 <div id="divCV" >
-<p id="formacion"> <h4> FORMACIÓN <h4/> </p>
+<p id="formacion" > <h4> FORMACIÓN <h4/> </p>
 <p> Licenciatura en Ciencias Física . Universidad de Santiago de Compostela </p> 
 <p> Tres cursos de Doctorado </p> <br> </br>
 
 <p id="publicaciones"> <h4> PUBLICACIONES<h4/> </p>
-<p> Tres cursos de Doctorado </p> 
+<p class="remarcable">  Tres cursos de Doctorado </p> 
 <p> Revista Investigación  y Ciencia N.560 "Sistemas tolerantes a fallos" </p> <br> </br>
 
-<p id="experiencia"> <h4> EXPERIENCIA PROFESIONAL <h4/> </p>
-<p> Data General España 1990-2013 </p> <br> </br>
+<p id="experiencia" > <h4> EXPERIENCIA PROFESIONAL <h4/> </p>
+<p class="remarcable"> Data General España 1990-2013 </p> <br> </br>
 
-<p id="idiomas" > <h4> IDIOMAS <h4/> </p>
-<p> Inglés Competencias de Nivel B2 UE </p> 
+<p id="idiomas" class="remarcable"> <h4> IDIOMAS <h4/> </p>
+<p class="remarcable"> Inglés Competencias de Nivel B2 UE </p> 
 <p> Francés Competencias de Nivel B2 UE </p> <br> </br>
 </div>
 </div>
@@ -66,9 +66,9 @@
 <footer>
     <p> CopyRight "Este documento es propiedad y ............" </p>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/pEro__1XPv8?si=nbbZlyEJN39m8lmp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <!-- > <iframe width="560" height="315" src="https://www.youtube.com/embed/pEro__1XPv8?si=nbbZlyEJN39m8lmp" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </iframe>   
-        </div>
+        </div> <-- >
         
 </footer>
 
