modified:   CSS/estilosCV.css 	modified:   Ejercicio CV 4.html

--- a/Ejercicio CV 4.html
+++ b/Ejercicio CV 4.html
@@ -4,6 +4,7 @@
 <meta name="Curriculum IN" content="CV Isabel Navarrina"></meta>
 <meta charset="utf-8"></meta>
 <title> CURRICULUM VITAE</title>
+<link rel="stylesheet" href="css/estilosCV.css" >
 </head>
 
 <body>
