--- a/FlexBloquesParalelos.html
+++ b/FlexBloquesParalelos.html
@@ -10,32 +10,23 @@
     gap: 2px;
     padding:0;
     list-style: none;
-    flex-direction: column ;
-    /*flex-direction: row ;*/
+    /*flex-direction: row ;
+    flex-direction: column ;*/
   }  
   ul li{
+    font-family: sans-serif;
     background: rgba(123,198,199,0.8);
-    flex-grow: 1;
-    width: 100px;
+    flex:1;
 
   }
-  ul a, ul a:link{
-    font-family: sans-serif;
-    text-decoration: none;
-    color: black;
-    padding: 8px;
-    display:block;
-    width:100%;
-  }
+  
 </style>
 </head>
 <body>
   <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Servicios</a></li>
-    <li><a href="#">Opciones</a></li>
-    <li><a href="#">Planes</a></li>
-    <li><a href="#">Contacto</a></li>
+    <li>Solo tengo una linea</li>
+    <li>Este texto ocupa algo mas que el de al lado.son dos lineas</li>
+    <li>Este es mas largo que los otros dos y ocupa mas lineas. Pero todos los bloques tienen la misma altura <p>Pero todos estos bloques tienen la misma altura y anchura, crecen o de contraen para repartirse el ancho disponible</p> </li>
   </ul>
 </body>
 </html>
