--- a/Ejercicio cajas.html
+++ b/Ejercicio cajas.html
@@ -5,8 +5,8 @@
 <title> prueba cajas</title>
 <Style>
 
-#div1 {display:inline-block;width:50%; border: 2px red solid; padding :1em; margin: 1em ;}
-#div2 {display:inline-block; width:50%; border: 2px red solid; padding :1em; margin: 1em ;}
+#div1 {float:left;width:50%; border: 2px red solid; padding :1em; margin: 1em ;}
+#div2 {float:right; width:50%; border: 2px red solid; padding :1em; margin: 1em ;}
 p {border: 2px red solid; padding :2em ; margin: 1em ;}
 span {border: 2px red solid; padding :1em ; margin: 1em ;}
 ul {list-style-type:none; border: 2px red solid; padding :1em ; margin: 2em;}
