--- a/FlexCentradoTitulo.html
+++ b/FlexCentradoTitulo.html
@@ -1,19 +1,24 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Ejercicio numero 1 de uso del flexbox</title>
-<style>
-div {
-    width:300px;
-    height:300px;
-}
-  
-  
-</style>
+  <meta charset="utf-8">
+  <title>Ejercicio numero 1 de uso del flexbox</title>
+  <style>
+
+  /* Ojo----hay que usar una clase. div no funciona*/
+  .capitulo{display:flex;
+            width:300px;
+            height:300px; 
+            background-color: rgba(193,219,210,1.00);
+            font-family: sans-serif;
+            justify-content: center;
+            align-items: center;
+          } 
+
+  </style>
 </head>
 <body>
-  <div>
+  <div class="capitulo">
     <h1>Capitulo Inicial</h1>
   <div>
 </body>
