--- a/Test 20240318/Index.html
+++ b/Test 20240318/Index.html
@@ -22,6 +22,8 @@
           #divVerduras  {width: 33%; }
           #divPescados  {float: right; width: 33%; }
           div.tablaProductos {width:340px; height: 725px; }
+          .expositores {display: flex;}
+          .tablaProductos {display:flex;}
          
 
     /*lista*/
@@ -45,14 +47,14 @@
   </style>
 </head>
 <body>
-  <div  display:flex; >
+  <div >
     <h1>“La botiga que t’ofereix productes de proximitat"</h1>
     <ul>
         <li><a href="#frutas"> Frutas </a></li>
         <li><a href="#verduras"> Verduras</a></li>
         <li><a href="#pescados"> Peix </a></li>
     </ul>
-</div>
+</div class="expositores">
 <div id="divFrutas" classe="tablaProductos">
     <table id="frutas">
         <tr>
