--- a/JavaScript/ejercicio3.html
+++ b/JavaScript/ejercicio3.html
@@ -1,12 +1,4 @@
 <HTML>
-<HEAD>
-   
-</HEAD>
-<BODY>
-   
-</BODY>
-<SCRIPT>
-  alert ("Hola, JS Mola")
- </SCRIPT>
+<SCRIPT> alert ("Hola, JS Mola") </SCRIPT>
  <SCRIPT src ="codigo.js"> </SCRIPT>
 </HTML>
