--- a/Flex/FlexMenuHorizontalListas.html
+++ b/Flex/FlexMenuHorizontalListas.html
@@ -10,8 +10,8 @@
     gap: 2px;
     padding:0;
     list-style: none;
-    flex-direction: column ;
-    /*flex-direction: row ;*/
+    flex-direction: row ;
+    /*flex-direction: column ;*/
   }  
   ul li{
     background: rgba(123,198,199,0.8);
